...
    <string name="display_seconds">%1$s s</string>
    <string name="best_calories">%1$d kcal</string>
    <string name="no_data_error">No data for range</string>
    <string name="best_exercise_icon">best exercise icon</string>
    <string name="exercises_on">Exercises on %1$s</string>
    <string name="workouts_on">Workouts on %1$s</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="delete_exercise_confirm">Do you want to delete this exercise?</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="rest">Rest</string>
    <string name="display_sets">Sets: %1$d</string>
...
    <string name="highest_single_weight_rep">Highest single weight rep</string>
    <string name="most_weight_per_set">Most weight per set</string>
    <string name="weight_display_toggle">weight display toggle</string>
    <string name="longest_time">Longest Time</string>
    <string name="shortest_time">Shortest Time</string>
    <string name="time_display_toggle">time display toggle</string>
    <string name="change_month">change month</string>
    <string name="previous_year">previous year</string>
    <string name="next_year">next year</string>
    <string name="workout_name">Workout Name</string>
    <string name="workout_exercises">Workout Exercises</string>
    <string name="available_exercises">Available Exercises</string>
    <string name="select_exercise">Select %1$s</string>
    <string name="deselect_exercise">Deselect %1$s</string>
    <string name="add_workout">Add Workout</string>
...
